# ChangeLog for net-misc/kovpn
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/kovpn/ChangeLog,v 1.6 2007/09/16 05:06:29 josejx Exp $

  16 Sep 2007; Joseph Jezak <josejx@gentoo.org> kovpn-0.3_pre6-r1.ebuild:
  Marked ~ppc for bug #188450.

*kovpn-0.3_pre6-r1 (14 Sep 2006)

  14 Sep 2006; Christian Hartmann <ian@gentoo.org>
  +files/traywindow_x86_64.patch, +kovpn-0.3_pre6-r1.ebuild:
  Fixed bug #139327; commit approved by tantive

*kovpn-0.3_pre6 (02 Jul 2006)

  02 Jul 2006; Michael Imhof <tantive@gentoo.org> kovpn-0.2.ebuild,
  kovpn-0.3_pre2.ebuild, +kovpn-0.3_pre6.ebuild:
  Version bumped.

  27 Apr 2006; Alec Warner <antarus@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

*kovpn-0.3_pre2 (26 Apr 2006)

  26 Apr 2006; <tantive@gentoo.org> +kovpn-0.3_pre2.ebuild:
  Version bumped.

*kovpn-0.2 (05 Apr 2006)

  05 Apr 2006; <tantive@gentoo.org> +kovpn-0.2.ebuild:
  Initial import. Contributed by Michael Kaufmann <gentoo@enlighter.de>.
  Closes #128494.
