@@ -1,10 +1,8 @@
 AUX traywindow_x86_64.patch 941 RMD160 39d3371a012312b740b693481379d4661dc8d36f SHA1 0a53867863f35bdc03a6a5f51e523483b52a2f56 SHA256 4a37bfcb1643839141b9dfe6c708ef4e801bcd147aa6f704705ee130699d3feb
-DIST kovpn-0.2.tar.bz2 487299 RMD160 ebce39199a7b26b510e8cb30b5770e01fe4ccf09 SHA1 d6c2ccc88bc2183c3c1c5765dd319f9485d68233 SHA256 a32e3d9e8564ce293e8f3acdbca2236e6c07a34cd25f9175458120f4a278d6e1
-DIST kovpn-0.3_pre2.tar.bz2 3592040 RMD160 35b5edcc1c0d08b9ff5807c862a882c7bc04ae4d SHA1 870a2b67648514931bf57aac58e6d8f052b9544d SHA256 338aa0a1b8a00a87daa474c0be325ae5b20b69c431f48df851944ff4fdf4ca01
-DIST kovpn-0.3_pre6.tar.bz2 860206 RMD160 8a5eac49b6727403095c0bd80fe276424809c33c SHA1 c33e5e30a8e5212962bab0918b1b7810e3f6768c SHA256 98644c91c89e682fd0804337ad0d12eb5b2ef57f88104805492ca23d64c3f75b
-EBUILD kovpn-0.2.ebuild 521 RMD160 7a52fa28e99c6a3177ffa551139ff5eec2cb3103 SHA1 7ffd2c7d85fd22e748959e282c404ef3760f0936 SHA256 03205427954b21b7044e45ed8e6f7cf70d9710881c8ca4aaaa500a52df80c677
-EBUILD kovpn-0.3_pre2.ebuild 525 RMD160 214e50e5e9e290f29b819d4f4d0e0f835e1c569d SHA1 c6efa929fc2bb75c3c4e8fd1abb197eec9209387 SHA256 7d37da232434b833030c81461423a916eee1436ed47cbb87d9e31c48bbbebe7e
-EBUILD kovpn-0.3_pre6-r1.ebuild 617 RMD160 ff57b2b52d517067e8b78e6e9b52ff6ac47fe06b SHA1 032d668f6f8fa86edf3acc333a225e8ecd877e49 SHA256 b734aa6c1fcb1b1ec415e3a31e9fd43ebabf203787f117786933ce2c28c6b5a6
-EBUILD kovpn-0.3_pre6.ebuild 525 RMD160 3b232ce96110bbfc2dc4591ae263ba53a27dade1 SHA1 a86e364a6e091d650fc726e031868c9f72fc5370 SHA256 c4a8de116c5f9ff6864cfc97bb3530f14bf40fdec84cdfc93b3bfe6573b4cdf3
-MISC ChangeLog 1045 RMD160 ab8ccfdfe52ef2b4543444fe90546f3450934c12 SHA1 abecd517d93da425060db09ce8b5c03fd9f5f019 SHA256 af926fe87dd3b7a64a9fb61df61e58a8626faa258b362c17feb1733fec1ee587
+DIST kovpn-0.3_pre6.tar.bz2 529873 RMD160 9e40c850c162238379e4ab97125686654b4cb8fc SHA1 0b836ac3cc1949ebe2aa702a6bf1d9909284a98b SHA256 416d72f982e05d8ae91ed3044a3b9b6641be9bb1c8be3b810efaf7965374b37d
+DIST kovpn-0.3_pre7.tar.bz2 277578 RMD160 cd228541fe2c6372d39a20a277c77ce6a40e0049 SHA1 9c9cb5a228cb7a71a05f5afb0792234dd7a61b50 SHA256 a5fa750a255399bab9c486e5d15e2e7262c543d7910d8aed9f8fc1a316552c2d
+EBUILD kovpn-0.3_pre6-r1.ebuild 594 RMD160 0bc7916d2d28d6695b1adc0b7e12673f546b9808 SHA1 5acb684f00f52f5fcd69a5cdbce0299e2864fe70 SHA256 c88c74e73881d5b67afc30e418e1b1aa3a71884ae08f3e31e234fe49adec6109
+EBUILD kovpn-0.3_pre6.ebuild 535 RMD160 efd2f22837ca7c81ea23e94ab26b1221f4a0eb0b SHA1 036d6899019fe586cfb1c38455c8e68e69505cfd SHA256 e1b06ef601dfff8709b3b6bb2291f84a5cfc5663a6a446d54c943f01524d5b25
+EBUILD kovpn-0.3_pre7.ebuild 599 RMD160 6dfe44d0078588ec6b8dddb8eece5191bd1c3372 SHA1 156b9b96e8d6e35d4ae0d151b336188cb14657e8 SHA256 cdb3666c32d52c86e8ff439192b7a6b9c76150ebd28ba5f477602b8e9d56b249
+MISC ChangeLog 1379 RMD160 9b28e07904a562ac43f7addd04392fa89deb23bb SHA1 c1cc6a444351cd608eb3a11a1284755aa19d9509 SHA256 56675388992465a36402ba94d5e1daa1794cd3ec2fe9b5e54be75ca6cb8fc726
 MISC metadata.xml 222 RMD160 88b0f9f0911f20881c2c87e436a2657f95f485a8 SHA1 c8113bfaf5c618bb55458ce5aef07ebaf232da90 SHA256 2355dc88d92731b72b6c3873963a60670f794b79482b0d76284d8f848a00f173
